Do not crash after SAL sends invalid response
We return an empty list instead; the caller already handles this case.

Fixes #3